Make sure the cart title is aligned left
svn commit r57917

--- a/www/styles/store-cart-lightbox.css
+++ b/www/styles/store-cart-lightbox.css
@@ -145,6 +145,7 @@
 #store_product_cart h3 {
 	margin: 0 10px;
 	font-size: 130%;
+	text-align: left;
 }
 
 #store_product_cart .store-cart-description h4 {
